# Origo

./: .dockerignore  .env.example  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
control-plane/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  clickhouse-config.xml  dagster.yaml  dagster_cloud.yaml  docker-compose.yml  pyproject.toml  requirements.txt  workspace.yaml
control-plane/.github/workflows/: pr_checks_codeql.yml  pr_post_changelog.yml
control-plane/migrations/: README.md
control-plane/migrations/sql/: 0001__create_migration_probe.sql  0002__create_etf_daily_metrics_long.sql  0003__create_fred_series_metrics_long.sql  0004__create_binance_trades.sql  0005__create_binance_agg_trades.sql  0006__create_binance_futures_trades.sql  0007__create_binance_futures_agg_trades.sql  0008__create_okx_spot_trades.sql  0009__create_bybit_spot_trades.sql  0010__create_bitcoin_block_headers.sql  0011__create_bitcoin_block_transactions.sql  0012__create_bitcoin_mempool_state.sql  0013__create_bitcoin_block_fee_totals.sql  0014__create_bitcoin_block_subsidy_schedule.sql  0015__create_bitcoin_network_hashrate_estimate.sql  0016__create_bitcoin_circulating_supply.sql  0017__create_canonical_event_envelope_schema.sql  0018__create_canonical_event_log.sql  0019__create_canonical_ingest_cursor_state.sql  0020__create_canonical_ingest_cursor_ledger.sql  0021__create_canonical_source_completeness_checkpoints.sql  0022__create_canonical_projector_checkpoints.sql  0023__create_canonical_projector_watermarks.sql  0024__create_canonical_aligned_1s_aggregates.sql  0025__create_canonical_aligned_projection_policies.sql  0026__create_canonical_binance_spot_trades_native_v1.sql  0027__create_canonical_binance_spot_agg_trades_native_v1.sql  0028__create_canonical_binance_futures_trades_native_v1.sql  0029__create_canonical_etf_daily_metrics_native_v1.sql  0031__create_canonical_okx_spot_trades_native_v1.sql  (+16 more)
control-plane/origo_control_plane/: aligned_export_s5_06_07_proof.py  definitions.py  etf_daily_alerts_proof.py  etf_daily_retry_proof.py  etf_daily_schedule_proof.py  s14_c1_event_migration_proof.py  s14_c2_event_writer_proof.py  s14_c3_ingest_reconciliation_proof.py  s14_c4_projector_runtime_proof.py  s14_c5_aligned_framework_proof.py  s14_c8_precision_registry_proof.py  s14_c9_spot_trades_pilot_cutover.py  s14_g1_error_taxonomy_proof.py  s14_g2_runtime_audit_proof.py  s14_g3_quarantine_proof.py  s14_g4_precision_guardrail_proof.py  s14_p1_raw_payload_hash_determinism_proof.py  s14_p2_exactly_once_ingest_proof.py  s14_p3_no_miss_detection_proof.py  s14_p4_raw_fidelity_precision_proof.py  s14_p5_projector_resume_determinism_proof.py  s14_p6_pilot_cutover_parity_proof.py  s15_g1_exchange_integrity_guardrail_proof.py  s15_p1_p3_binance_serving_proofs.py  s15_p4_exactly_once_ingest_proof.py  s15_p5_no_miss_completeness_proof.py  s15_p6_raw_fidelity_precision_proof.py  s16_g3_reconciliation_guardrail_proof.py  s16_g4_precision_guardrail_proof.py  s16_p1_p3_etf_serving_proofs.py  s16_p4_exactly_once_ingest_proof.py  s16_p5_no_miss_completeness_proof.py  s16_p6_raw_fidelity_precision_proof.py  s17_g3_reconciliation_guardrail_proof.py  s17_g4_precision_guardrail_proof.py  s17_p1_p3_fred_serving_proofs.py  s17_p4_exactly_once_ingest_proof.py  s17_p5_no_miss_completeness_proof.py  s17_p6_raw_fidelity_precision_proof.py  s18_g1_exchange_integrity_guardrail_proof.py  (+34 more)
control-plane/scripts/: update_changelog.py
(+705 files in other folders)
